workloads/guestbook/deployment.yaml
# The Kubernetes guestbook tutorial frontend; entries are stored in the
# redis-leader/redis-follower services it resolves via DNS
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
        - name: guestbook-ui
          image: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend:v5
          ports:
            - containerPort: 80
