workloads/guestbook/redis-follower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-follower
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis
      role: follower
  template:
    metadata:
      labels:
        app: redis
        role: follower
    spec:
      containers:
        - name: redis
          image: us-docker.pkg.dev/google-samples/containers/gke/gb-redis-follower:v2
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  # the frontend resolves this name via DNS (reads go to followers)
  name: redis-follower
spec:
  selector:
    app: redis
    role: follower
  ports:
    - port: 6379
      targetPort: 6379
